// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react > should lint 'react/button-has-type' 1`] = `[]`;

exports[`react > should lint 'react/checked-requires-onchange-or-re…' 1`] = `[]`;

exports[`react > should lint 'react/display-name' 1`] = `
[
  {
    "column": 7,
    "line": 3,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 32,
    "line": 3,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/exhaustive-deps' 1`] = `[]`;

exports[`react > should lint 'react/forward-ref-uses-ref' 1`] = `
[
  {
    "column": 5,
    "line": 5,
    "message": "Component definition is missing display name.",
    "rule": "react(display-name)",
    "severity": "warning",
  },
  {
    "column": 34,
    "line": 5,
    "message": "Components wrapped with \`forwardRef\` must have a \`ref\` parameter",
    "rule": "react(forward-ref-uses-ref)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/hook-use-state' 1`] = `[]`;

exports[`react > should lint 'react/iframe-missing-sandbox' 1`] = `
[
  {
    "column": 2,
    "line": 3,
    "message": "An iframe element is missing a sandbox attribute",
    "rule": "react(iframe-missing-sandbox)",
    "severity": "warning",
  },
  {
    "column": 17,
    "line": 4,
    "message": "An iframe element defines a sandbox attribute with invalid value: invalid-value",
    "rule": "react(iframe-missing-sandbox)",
    "severity": "warning",
  },
  {
    "column": 17,
    "line": 5,
    "message": "An \`iframe\` element defines a sandbox attribute with both allow-scripts and allow-same-origin which is invalid",
    "rule": "react(iframe-missing-sandbox)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-boolean-value' 1`] = `[]`;

exports[`react > should lint 'react/jsx-curly-brace-presence' 1`] = `
[
  {
    "column": 6,
    "line": 3,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 26,
    "line": 4,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 7,
    "line": 6,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 7,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 28,
    "line": 7,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 7,
    "line": 9,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 10,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 33,
    "line": 10,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 6,
    "line": 12,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 6,
    "line": 23,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 36,
    "line": 24,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 7,
    "line": 26,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 27,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 33,
    "line": 27,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 41,
    "line": 27,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 29,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 25,
    "line": 29,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 33,
    "line": 29,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 28,
    "line": 31,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 33,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 28,
    "line": 33,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
  {
    "column": 25,
    "line": 35,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 31,
    "line": 37,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 37,
    "line": 37,
    "message": "\`'\` can be escaped with &apos; or &lsquo; or &#39; or &rsquo;",
    "rule": "react(no-unescaped-entities)",
    "severity": "warning",
  },
  {
    "column": 41,
    "line": 37,
    "message": "\`'\` can be escaped with &apos; or &lsquo; or &#39; or &rsquo;",
    "rule": "react(no-unescaped-entities)",
    "severity": "warning",
  },
  {
    "column": 43,
    "line": 37,
    "message": "\`"\` can be escaped with &quot; or &ldquo; or &#34; or &rdquo;",
    "rule": "react(no-unescaped-entities)",
    "severity": "warning",
  },
  {
    "column": 47,
    "line": 37,
    "message": "\`"\` can be escaped with &quot; or &ldquo; or &#34; or &rdquo;",
    "rule": "react(no-unescaped-entities)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 39,
    "message": "Curly braces are unnecessary here.",
    "rule": "react(jsx-curly-brace-presence)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-handler-names' 1`] = `[]`;

exports[`react > should lint 'react/jsx-key' 1`] = `
[
  {
    "column": 11,
    "line": 3,
    "message": "Missing "key" prop for element in iterator.",
    "rule": "react(jsx-key)",
    "severity": "error",
  },
  {
    "column": 12,
    "line": 4,
    "message": "Missing "key" prop for element in iterator.",
    "rule": "react(jsx-key)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/jsx-max-depth' 1`] = `
[
  {
    "column": 7,
    "line": 3,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 9,
    "line": 7,
    "message": "JSX nesting depth of 3 exceeds the configured maximum of 2",
    "rule": "react(jsx-max-depth)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-no-comment-textnodes' 1`] = `[]`;

exports[`react > should lint 'react/jsx-no-constructed-context-valu…' 1`] = `
[
  {
    "column": 46,
    "line": 4,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 10,
    "line": 9,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 12,
    "line": 10,
    "message": "JSX attribute values should not contain functions created in the same scope.",
    "rule": "react-perf(jsx-no-new-function-as-prop)",
    "severity": "error",
  },
  {
    "column": 30,
    "line": 11,
    "message": "The Context \`value\` prop should not be constructed.",
    "rule": "react(jsx-no-constructed-context-values)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-no-duplicate-props' 1`] = `
[
  {
    "column": 6,
    "line": 3,
    "message": "No duplicate props allowed. The prop "a" is duplicated.",
    "rule": "react(jsx-no-duplicate-props)",
    "severity": "error",
  },
  {
    "column": 6,
    "line": 4,
    "message": "No duplicate props allowed. The prop "foo" is duplicated.",
    "rule": "react(jsx-no-duplicate-props)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/jsx-no-literals' 1`] = `
[
  {
    "column": 6,
    "line": 3,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-no-script-url' 1`] = `
[
  {
    "column": 4,
    "line": 3,
    "message": "React 19 disallows \`javascript:\` URLs as a security precaution.",
    "rule": "react(jsx-no-script-url)",
    "severity": "warning",
  },
  {
    "column": 30,
    "line": 3,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-no-target-blank' 1`] = `
[
  {
    "column": 23,
    "line": 3,
    "message": "Using target=\`_blank\` without rel=\`noreferrer\` (which implies rel=\`noopener\`) is a security risk in older browsers: see https://mathiasbynens.github.io/rel-noopener/#recommendations",
    "rule": "react(jsx-no-target-blank)",
    "severity": "warning",
  },
  {
    "column": 60,
    "line": 3,
    "message": "Unnecessary closing tag",
    "rule": "react(self-closing-comp)",
    "severity": "warning",
  },
  {
    "column": 23,
    "line": 4,
    "message": "Using target=\`_blank\` without rel=\`noreferrer\` (which implies rel=\`noopener\`) is a security risk in older browsers: see https://mathiasbynens.github.io/rel-noopener/#recommendations",
    "rule": "react(jsx-no-target-blank)",
    "severity": "warning",
  },
  {
    "column": 51,
    "line": 4,
    "message": "Unnecessary closing tag",
    "rule": "react(self-closing-comp)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/jsx-no-useless-fragment' 1`] = `[]`;

exports[`react > should lint 'react/jsx-pascal-case' 1`] = `[]`;

exports[`react > should lint 'react/jsx-props-no-spread-multi' 1`] = `
[
  {
    "column": 6,
    "line": 3,
    "message": "Prop 'props' is spread multiple times.",
    "rule": "react(jsx-props-no-spread-multi)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/no-array-index-key' 1`] = `
[
  {
    "column": 12,
    "line": 4,
    "message": "Usage of Array index in keys is not allowed",
    "rule": "react(no-array-index-key)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/no-children-prop' 1`] = `[]`;

exports[`react > should lint 'react/no-clone-element' 1`] = `
[
  {
    "column": 10,
    "line": 5,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 9,
    "line": 10,
    "message": "\`React.cloneElement\` should not be used.",
    "rule": "react(no-clone-element)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/no-danger-with-children' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Only set one of \`children\` or \`props.dangerouslySetInnerHTML\`",
    "rule": "react(no-danger-with-children)",
    "severity": "error",
  },
  {
    "column": 51,
    "line": 3,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 4,
    "message": "Only set one of \`children\` or \`props.dangerouslySetInnerHTML\`",
    "rule": "react(no-danger-with-children)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/no-namespace' 1`] = `[]`;

exports[`react > should lint 'react/no-object-type-as-default-prop' 1`] = `
[
  {
    "column": 10,
    "line": 3,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 16,
    "line": 3,
    "message": "JSX attribute values should not contain Arrays created in the same scope.",
    "rule": "react-perf(jsx-no-new-array-as-prop)",
    "severity": "error",
  },
  {
    "column": 24,
    "line": 3,
    "message": "Do not use an array literal as default prop value. Use a stable reference instead.",
    "rule": "react(no-object-type-as-default-prop)",
    "severity": "warning",
  },
  {
    "column": 7,
    "line": 7,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 16,
    "line": 7,
    "message": "JSX attribute values should not contain objects created in the same scope.",
    "rule": "react-perf(jsx-no-new-object-as-prop)",
    "severity": "error",
  },
  {
    "column": 25,
    "line": 7,
    "message": "Do not use an object literal as default prop value. Use a stable reference instead.",
    "rule": "react(no-object-type-as-default-prop)",
    "severity": "warning",
  },
  {
    "column": 10,
    "line": 9,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 26,
    "line": 9,
    "message": "Do not use a function expression as default prop value. Use a stable reference instead.",
    "rule": "react(no-object-type-as-default-prop)",
    "severity": "warning",
  },
  {
    "column": 11,
    "line": 10,
    "message": "\`button\` elements must have an explicit \`type\` attribute.",
    "rule": "react(button-has-type)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/no-react-children' 1`] = `[]`;

exports[`react > should lint 'react/no-render-return-value' 1`] = `
[
  {
    "column": 12,
    "line": 3,
    "message": "Do not depend on the return value from \`ReactDOM.render\`.",
    "rule": "react(no-render-return-value)",
    "severity": "error",
  },
  {
    "column": 10,
    "line": 5,
    "message": "Do not depend on the return value from \`ReactDOM.render\`.",
    "rule": "react(no-render-return-value)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/no-this-in-sfc' 1`] = `[]`;

exports[`react > should lint 'react/no-unknown-property' 1`] = `
[
  {
    "column": 20,
    "line": 4,
    "message": "Unknown property found",
    "rule": "react(no-unknown-property)",
    "severity": "warning",
  },
  {
    "column": 34,
    "line": 4,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 23,
    "line": 5,
    "message": "Unknown property found",
    "rule": "react(no-unknown-property)",
    "severity": "warning",
  },
  {
    "column": 39,
    "line": 5,
    "message": "Disallow literal text as JSX children",
    "rule": "react(jsx-no-literals)",
    "severity": "warning",
  },
  {
    "column": 25,
    "line": 8,
    "message": "Unknown property found",
    "rule": "react(no-unknown-property)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/no-unstable-nested-components' 1`] = `
[
  {
    "column": 10,
    "line": 3,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 3,
    "line": 4,
    "message": "Do not define components during render.",
    "rule": "react(no-unstable-nested-components)",
    "severity": "error",
  },
  {
    "column": 12,
    "line": 4,
    "message": "Fast refresh only works when a file has exports. Move your component(s) to a separate file.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/only-export-components' 1`] = `
[
  {
    "column": 14,
    "line": 4,
    "message": "Fast refresh only works when a file only exports components. Use a new file to share constants or functions between components.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 26,
    "line": 5,
    "message": "Fragments should contain more than one child.",
    "rule": "react(jsx-no-useless-fragment)",
    "severity": "warning",
  },
  {
    "column": 16,
    "line": 8,
    "message": "Fast refresh can't handle anonymous components. Add a name to your export.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 11,
    "message": "This rule can't verify that \`export *\` only exports components.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 14,
    "line": 15,
    "message": "Fast refresh only works when a file only exports components. Use a new file to share constants or functions between components.",
    "rule": "react(only-export-components)",
    "severity": "warning",
  },
  {
    "column": 23,
    "line": 15,
    "message": "Missing "key" prop for element in array.",
    "rule": "react(jsx-key)",
    "severity": "error",
  },
  {
    "column": 32,
    "line": 15,
    "message": "Missing "key" prop for element in array.",
    "rule": "react(jsx-key)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/prefer-function-component' 1`] = `
[
  {
    "column": 7,
    "line": 3,
    "message": "Class component should be written as a function component.",
    "rule": "react(prefer-function-component)",
    "severity": "error",
  },
  {
    "column": 7,
    "line": 9,
    "message": "Class component should be written as a function component.",
    "rule": "react(prefer-function-component)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/rules-of-hooks' 1`] = `
[
  {
    "column": 31,
    "line": 6,
    "message": "React Hook "useState" is called conditionally. React Hooks must be called in the exact same order in every component render.",
    "rule": "react-hooks(rules-of-hooks)",
    "severity": "error",
  },
  {
    "column": 5,
    "line": 10,
    "message": "React Hook "useEffect" may be executed more than once. Possibly because it is called in a loop. React Hooks must be called in the exact same order in every component render.",
    "rule": "react-hooks(rules-of-hooks)",
    "severity": "error",
  },
  {
    "column": 29,
    "line": 16,
    "message": "React Hook "useState" is called in function "regularFunction" that is neither a React function component nor a custom React Hook function. React component names must start with an uppercase letter. React Hook names must start with the word "use".",
    "rule": "react-hooks(rules-of-hooks)",
    "severity": "error",
  },
]
`;

exports[`react > should lint 'react/self-closing-comp' 1`] = `
[
  {
    "column": 41,
    "line": 3,
    "message": "Unnecessary closing tag",
    "rule": "react(self-closing-comp)",
    "severity": "warning",
  },
  {
    "column": 35,
    "line": 4,
    "message": "Unnecessary closing tag",
    "rule": "react(self-closing-comp)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 7,
    "message": "Unnecessary closing tag",
    "rule": "react(self-closing-comp)",
    "severity": "warning",
  },
]
`;

exports[`react > should lint 'react/state-in-constructor' 1`] = `[]`;

exports[`react > should lint 'react/style-prop-object' 1`] = `[]`;

exports[`react > should lint 'react/void-dom-elements-no-children' 1`] = `[]`;

exports[`react > should lint 'react-perf/jsx-no-jsx-as-prop' 1`] = `[]`;

exports[`react > should lint 'react-perf/jsx-no-new-array-as-prop' 1`] = `[]`;

exports[`react > should lint 'react-perf/jsx-no-new-function-as-prop' 1`] = `[]`;

exports[`react > should lint 'react-perf/jsx-no-new-object-as-prop' 1`] = `[]`;
